frontend/tests/errors/ER-024/fixed_cast_not_implemented/test.vx
&^main() -> #i32 {
  x:#u40.40;
  y:#u16.0 = (#u16.0)x;
  0
}
